# WeChat_LandLords

./: README.md  README.txt  common.py  mc_engine.py  mc_engine_mp.py  minmax_engine.py  move_classifier.py  move_filter.py  move_gener.py  move_player.py  situation.py  solve_puzzle.py  test.py  test_mc_engine.py  test_mc_engine_mp.py  test_minmax_engine.py  ui_engine.py  utils.py
Cpp/: .gitignore  CMakeLists.txt  Makefile  MinMax.hpp  MoveClassifier.hpp  MoveFilter.hpp  MoveGener.hpp  MovePlayer.hpp  README.txt  solve_puzzle.cpp  unit_test.cpp  utils.hpp
Python/: move_filter.py  move_gener.py  move_player.py  solve_puzzle.py  test.py  utils.py
deprecated_engines/: Note.txt  mc_engine.py  mc_engine_mp.py  test_mc_engine.py  test_mc_engine_mp.py
